--- a/services/Safqah.Wallet/Safqah.Wallet.csproj
+++ b/services/Safqah.Wallet/Safqah.Wallet.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="wwwroot\**" />
+    <Content Remove="wwwroot\**" />
+    <EmbeddedResource Remove="wwwroot\**" />
+    <None Remove="wwwroot\**" />
+  </ItemGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
@@ -17,10 +24,7 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\shared\Safqah.Infrastructure\Safqah.Infrastructure.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <ProjectReference Include="..\..\shared\Safqah.Infrastructure\Safqah.Infrastructure.csproj" />
   </ItemGroup>
 	
 
