--- a/services/Safqah.Investor/Safqah.Investors.csproj
+++ b/services/Safqah.Investor/Safqah.Investors.csproj
@@ -22,10 +22,10 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.32" />
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.10" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.32" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
 	</ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\shared\Safqah.Infrastructure\Safqah.Infrastructure.csproj" />
-  </ItemGroup>
 	
 
 
