--- a/services/Safqah.Payment/Safqah.Payment.csproj
+++ b/services/Safqah.Payment/Safqah.Payment.csproj
@@ -14,6 +14,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="3.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.32">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
