done from adding payment top up queue

--- a/services/Safqah.Opportunity/appsettings.json
+++ b/services/Safqah.Opportunity/appsettings.json
@@ -34,5 +34,8 @@
     "Key": "ThisismySecretKey",
     "Issuer": "example.com"
   },
+  "HttpClientsSettings": {
+    "InvestorUrl": "https://localhost:44393"
+  },
   "AllowedHosts": "*"
 }
