--- a/services/Safqah.Opportunity/Safqah.Opportunities.csproj
+++ b/services/Safqah.Opportunity/Safqah.Opportunities.csproj
@@ -13,6 +13,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="3.1.0" />
