--- a/services/Safqah.Opportunities/appsettings.json
+++ b/services/Safqah.Opportunities/appsettings.json
@@ -28,14 +28,14 @@
     ]
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=Safqah;User ID=postgres;Password=myPassword;"
+    "Default": "Host=postgresql;Port=5432;Database=Safqah;User ID=postgres;Password=myPassword;"
   },
   "Jwt": {
     "Key": "ThisismySecretKey",
     "Issuer": "example.com"
   },
   "HttpClientsSettings": {
-    "InvestorUrl": "https://localhost:44393"
+    "InvestorUrl": "http://safqah.investors"
   },
   "AllowedHosts": "*"
 }
