--- a/Safqah.Opportunities.Consumer/Safqah.Opportunities.Consumer.csproj
+++ b/Safqah.Opportunities.Consumer/Safqah.Opportunities.Consumer.csproj
@@ -3,15 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>dotnet-Safqah.Opportunities.Consumer-56d7f9d8-60ea-441c-8c20-04119f330f96</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.20" />
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.1" />
+	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Safqah.Shared\Safqah.Shared.csproj" />
-    <ProjectReference Include="..\services\Safqah.Opportunity\Safqah.Opportunities.csproj" />
+    <ProjectReference Include="..\services\Safqah.Opportunities\Safqah.Opportunities.csproj" />
   </ItemGroup>
 </Project>
