--- a/Safqah.Wallet.Consumer/Properties/launchSettings.json
+++ b/Safqah.Wallet.Consumer/Properties/launchSettings.json
@@ -1,10 +1,13 @@
-﻿{
+{
   "profiles": {
     "Safqah.Wallet.Consumer": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
