--- a/Safqah.Wallet.Consumer/Safqah.Wallet.Consumer.csproj
+++ b/Safqah.Wallet.Consumer/Safqah.Wallet.Consumer.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>dotnet-Safqah.Wallet.Consumer-bce7ba70-9dd6-48d2-be98-17d4c6c8879f</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.20" />
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.1" />
+	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
