--- a/Safqah.Wallet.Consumer/appsettings.json
+++ b/Safqah.Wallet.Consumer/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=Safqah;User ID=postgres;Password=myPassword;"
+    "Default": "Host=postgresql;Port=5432;Database=Safqah;User ID=postgres;Password=myPassword;"
   }
 }
