--- a/services/Safqah.Opportunities/Properties/launchSettings.json
+++ b/services/Safqah.Opportunities/Properties/launchSettings.json
@@ -8,14 +8,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Safqah.Investor": {
+    "Safqah.Opportunity": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5004;http://localhost:5005"
+      "applicationUrl": "https://localhost:5006;http://localhost:5007"
     },
     "Docker": {
       "commandName": "Docker",
@@ -30,8 +30,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:23810",
-      "sslPort": 44393
+      "applicationUrl": "http://localhost:23811",
+      "sslPort": 44394
     }
   }
 }
