--- a/services/Safqah.Payment/appsettings.json
+++ b/services/Safqah.Payment/appsettings.json
@@ -28,7 +28,7 @@
     ]
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=Safqah;User ID=postgres;Password=myPassword;"
+    "Default": "Host=postgresql;Port=5432;Database=Safqah;User ID=postgres;Password=myPassword;"
   },
   "Jwt": {
     "Key": "ThisismySecretKey",
